Add pilot subscription activation
